<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/radioFragment"
    tools:context=".fragments.RadioFragment">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/scoreBoard"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:layout_weight="2.5"
                    android:text="@string/score"
                    android:textSize="20sp"/>

                <TextView
                    android:id="@+id/points"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:layout_weight="1"
                    android:text="0/100"
                    android:textSize="20sp"/>
            </LinearLayout>
            <TextView
                android:id="@+id/numberOfQuestion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:layout_marginLeft="20dp"
                android:textColor="@color/black"
                android:text="@string/question"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/questionText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:gravity="start"
                android:text="@string/questionText"
                android:textColor="@color/black"
                android:textSize="20sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="visible">


                <RadioGroup
                    android:id="@+id/myRadioGroup"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp">

                    <RadioButton
                        android:id="@+id/radioButton1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/answer1"
                        android:textSize="15sp"/>

                    <RadioButton
                        android:id="@+id/radioButton2"
                        android:layout_marginTop="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/answer2"
                        android:textSize="15sp"/>

                    <RadioButton
                        android:id="@+id/radioButton3"
                        android:layout_marginTop="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/answer3"
                        android:textSize="15sp"/>

                    <RadioButton
                        android:id="@+id/radioButton4"
                        android:layout_marginTop="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/answer4"
                        android:textSize="15sp"/>
                </RadioGroup>
                <CheckBox
                    android:id="@+id/showHint"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:text="@string/showHint"
                    android:textSize="13sp"/>
                <TextView
                    android:id="@+id/theHint"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:textColor="@color/black"
                    android:text="@string/hint"
                    android:textSize="13sp"
                    android:visibility="gone"/>
            </LinearLayout>
            <Button
                android:id="@+id/submitAnswerButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="80dp"
                android:layout_marginRight="80dp"
                android:layout_marginBottom="25dp"
                android:backgroundTint="@color/black"
                android:text="@string/submitAnswerButton"/>
        </LinearLayout>
    </ScrollView>

</FrameLayout>