<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/inputFragment"
    tools:context=".fragments.InputFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/scoreBoard"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:layout_weight="2.5"
                    android:text="@string/score"
                    android:textSize="20sp"/>

                <TextView
                    android:id="@+id/points"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:layout_weight="1"
                    android:text="0/100"
                    android:textSize="20sp"/>
            </LinearLayout>
            <TextView
                android:id="@+id/numberOfQuestion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:layout_marginLeft="20dp"
                android:textColor="@color/black"
                android:text="@string/question"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/questionText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:gravity="start"
                android:text="@string/questionText"
                android:textColor="@color/black"
                android:textSize="20sp"/>
            <CheckBox
                android:id="@+id/showHintInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/showHint"
                android:textSize="13sp"/>
            <TextView
                android:id="@+id/theHintInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:textColor="@color/black"
                android:text="@string/hint"
                android:textSize="13sp"
                android:visibility="gone"/>
            <LinearLayout
                android:id="@+id/inputAnswerTextLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/inputAnswer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/black"
                    android:hint="@string/inputAnswer"
                    android:inputType="text" />
                <Button
                    android:id="@+id/inputTextSubmitButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="50dp"
                    android:layout_marginRight="50dp"
                    android:layout_marginBottom="25dp"
                    android:backgroundTint="@color/black"
                    android:text="@string/submitAnswerButton"/>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</FrameLayout>