<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/mainFragment"
    tools:context=".fragments.MainFragment"
    app:passwordToggleEnabled="true">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/appTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp"
                android:layout_marginBottom="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:gravity="center_horizontal"
                android:text="@string/applicationTitle"
                android:textColor="@color/purple_700"
                android:textSize="38sp" />

            <EditText
                android:id="@+id/userNameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="20dp"
                android:ems="10"
                android:hint="@string/userName"
                android:backgroundTint="@color/black"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/userPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="20dp"
                android:ems="10"
                android:hint="@string/password"
                android:backgroundTint="@color/black"
                android:inputType="textPassword" />
            <CheckBox
                android:id="@+id/showPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:text="@string/showPassword"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:orientation="vertical">

                <Button
                    android:id="@+id/startQuizButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="80dp"
                    android:layout_marginLeft="80dp"
                    android:backgroundTint="@color/black"
                    android:text="@string/startQuizButton" />

                <Button
                    android:id="@+id/rulesButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="80dp"
                    android:layout_marginLeft="80dp"
                    android:layout_marginBottom="15dp"
                    android:backgroundTint="@color/black"
                    android:text="@string/rulesButton" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</FrameLayout>